--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">FirebaseAuthDemo</string>
+    <string name="app_name">Customer Firebase</string>
 
-    <string name="site_title">Firebase Demo</string>
+    <string name="site_title">Customer Firebase</string>
     <string name="tutorial_title">
         Firebase\n
         authentication
