--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,13 +50,15 @@
     <string name="save_location">save Location</string>
     <string name="get_location">get location</string>
     <string name="product_details">Product Details</string>
-    <string name="product_name">Product Name</string>
+    <string name="product_name">Product Name : </string>
     <string name="load_product">Load Product</string>
     <string name="insert_product">Insert Product</string>
-    <string name="total">Total</string>
-    <string name="price">Price</string>
-    <string name="quantity">Quantity</string>
+    <string name="total">Total : </string>
+    <string name="price">Price : </string>
+    <string name="quantity">Quantity : </string>
     <string name="welcome">Welcome</string>
     <string name="no_customer_added">No Customer Added</string>
     <string name="customer_name">Customer Name</string>
+    <string name="no_product_found">No Product Found</string>
+    <string name="product_category">Product Category :</string>
 </resources>
