--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="no_product_found">No Product Found</string>
     <string name="product_category">Product Category :</string>
     <string name="click_here_for_more_info">Click here for more info</string>
+    <string name="layout">layout</string>
 </resources>
