--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,6 @@
     <string name="product_category">Product Category :</string>
     <string name="click_here_for_more_info">Click here for more info</string>
     <string name="layout">layout</string>
+    <string name="purchase">Purchase</string>
+    <string name="cancel">Cancel</string>
 </resources>
