--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,13 @@
     <string name="layout">layout</string>
     <string name="purchase">Purchase</string>
     <string name="cancel">Cancel</string>
+    <string name="oops">OOPS</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="please_check_your_internet_connection">Please Check Your Internet Connection</string>
+    <string name="retry">Retry</string>
+    <string name="_0">0</string>
+    <string name="add_to_cart">Add To Cart</string>
+    <string name="category">Category</string>
+    <string name="username">Username</string>
+    <string name="date">date</string>
 </resources>
